updated MDAnalysis lecture
- p24 analysis extra material
- small fixes to main notebook
- 1 extra slide

--- a/5_Analysis_MDAnalysis/1_MDAnalysis.ipynb
+++ b/5_Analysis_MDAnalysis/1_MDAnalysis.ipynb
@@ -1127,11 +1127,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "times = []\n",
+    "times_stride = []\n",
     "for ts in u.trajectory[1:-2:2]:\n",
-    "    times.append(u.trajectory.time)\n",
+    "    times_stride.append(u.trajectory.time)\n",
     "\n",
-    "print(times)"
+    "print(times_stride)"
    ]
   },
   {
@@ -1152,9 +1152,7 @@
     "for ts in u.trajectory:  \n",
     "    rgyr = bb.radius_of_gyration()   \n",
     "    print(f\"frame = {u.trajectory.time}: Rgyr = {rgyr} A\")\n",
-    "    rg.append([ts.frame, rgyr])\n",
-    "\n",
-    "rg = np.array(rg)"
+    "    rg.append(rgyr)"
    ]
   },
   {
@@ -1173,7 +1171,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "fig, ax = plt.subplots(1, 1)\n",
-    "ax.plot(rg[:, 0], rg[:, 1])\n",
+    "ax.plot(times, rg)\n",
     "ax.set_xlabel(\"time (ps)\")\n",
     "ax.set_ylabel(\"Rgyr ($\\AA$)\");"
    ]
@@ -1229,7 +1227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some quantities can be extracted from the trajectory without the need of looping over them. There are methods available that do the looping for you! One such method enables calculating the RMSD of every simulation frame with respect to a frame of interest."
+    "Some quantities can be extracted from the trajectory without the need of looping over them. There are methods available that do the looping for you! One such method enables calculating the RMSD of every simulation frame with respect to a frame of interest. The <code>MDAnalysis.analysis</code> module contains plenty of useful data analysis methods ([see here]([User Guide](https://userguide.mdanalysis.org/2.0.0-dev0/)). Let's load the <code>rms</code> sub-module, and let's have a look at the parameters of the <code>RMSD</code> method."
    ]
   },
   {
@@ -1238,7 +1236,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from MDAnalysis.analysis import align, diffusionmap, align, rms"
+    "from MDAnalysis.analysis import rms\n",
+    "rms.RMSD?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the <code>RMSD</code> method aligns all frames in a simulation vs a reference (using atoms defined by the <code>select</code> parameter). It then calculates the RMSD according to one or more atom selections (by default including those listed in the <code>select</code> parameters, plus any described in the <code>groupselections</code> optional parameter)."
    ]
   },
   {
@@ -1255,7 +1261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now plot the data we have gathered!"
+    "Let's now plot all the data we have gathered. Note that simulation timesteps are also included in the dataset produced."
    ]
   },
   {
@@ -1264,17 +1270,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rmsd = R_all.rmsd.T   # transpose makes it easier for plotting\n",
+    "rmsd = R_all.rmsd.T  # transpose makes it more comfortable for plotting\n",
     "time = rmsd[1]\n",
     "fig = plt.figure()\n",
-    "ax1 = fig.add_subplot(111)\n",
-    "ax1.plot(time, rmsd[2], '-', c=\"gray\", label=\"all\")\n",
-    "ax1.plot(time, rmsd[3], '-', c=\"mediumblue\", label=\"Domain 1\")\n",
-    "ax1.plot(time, rmsd[4], '-', c=\"deepskyblue\", label=\"Domain 2\")\n",
-    "ax1.legend(loc=\"best\", frameon=False)\n",
-    "ax1.set_xlabel(\"time (ns)\")\n",
-    "ax1.set_ylabel(r\"RMSD ($\\AA$)\")\n",
-    "ax1.set_title(\"align all\")"
+    "ax = fig.add_subplot(111)\n",
+    "ax.plot(time, rmsd[2], '-', c=\"gray\", label=\"all\")\n",
+    "ax.plot(time, rmsd[3], '-', c=\"mediumblue\", label=\"Selection 1\")\n",
+    "ax.plot(time, rmsd[4], '-', c=\"deepskyblue\", label=\"Selection 2\")\n",
+    "ax.legend(loc=\"best\", frameon=False)\n",
+    "ax.set_xlabel(\"time (ps)\")\n",
+    "ax.set_ylabel(r\"RMSD ($\\AA$)\")"
    ]
   },
   {
@@ -1291,10 +1296,10 @@
     "<div class=\"alert alert-info\">\n",
     "<b>Key points:</b>\n",
     "\n",
-    "- Start any analysis by creating a `Universe`\n",
+    "- Start any analysis by loading your protein structure or simulation in a `Universe`\n",
     "- `AtomGroup`s are selection of atoms that can be obtained using numpy syntax, or selection strings\n",
     "- `AtomGroup` content (positions, forces, velocities) change as you move through the trajectory\n",
-    "- `nglview` enables visualizing a universe.\n",
+    "- `nglview` enables visualizing a Universe.\n",
     "</div>"
    ]
   },
@@ -1305,12 +1310,12 @@
     "This has been a brief overview of `MDAnalysis`. This is a vast package, featuring most of the typical analysis you may want to carry out, and plenty of freedom to produce your own.\n",
     "\n",
     "**Next steps**\n",
-    "- If you haven't already, read through the [selection documentation](https://docs.mdanalysis.org/2.0.0-dev0/documentation_pages/selections.html) and play around with all the selection options not covered above\n",
+    "- For more on how to use MDAnalysis, see the [User Guide](https://userguide.mdanalysis.org/2.0.0-dev0/) and [documentation](https://docs.mdanalysis.org/2.0.0-dev0/)\n",
     "- More information on how to extract information from trajectory, building upon and extending what we have seen here, is available in the Jupyter notebook [Extra_Trajectories.ipynb](Extra_Trajectories.ipynb)\n",
+    "- If you are interested in knowing how the images in the Lecture slides were produced, have a look at the notebook [Extra_p24_analysis.ipynb](Extra_p24_analysis.ipynb)\n",
     "- [nglview](https://github.com/nglviewer/nglview#usage) has a lot of visualisation options - you can add multiple selections to one view, change their colour and representation style and more. Look through their documentaiton and see what you can create!\n",
     "\n",
     "**Additional resources**\n",
-    " - For more on how to use MDAnalysis, see the [User Guide](https://userguide.mdanalysis.org/2.0.0-dev0/) and [documentation](https://docs.mdanalysis.org/2.0.0-dev0/)\n",
     " - Ask questions on the [user mailing list](https://groups.google.com/group/mdnalysis-discussion) or on [Discord](https://discord.gg/fXTSfDJyxE)\n",
     " - Report bugs on [GitHub](https://github.com/MDAnalysis/mdanalysis/issues?)\n"
    ]
@@ -1575,7 +1580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
