--- a/5_Analysis_MDAnalysis/1_MDAnalysis.ipynb
+++ b/5_Analysis_MDAnalysis/1_MDAnalysis.ipynb
@@ -109,9 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "<a id='fundamentals'></a>\n",
     "# 1. Fundamental MDAnalysis objects\n",
@@ -501,9 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "<a id='selections'></a>\n",
     "# 2. Selecting atoms\n",
@@ -1310,12 +1306,13 @@
     "This has been a brief overview of `MDAnalysis`. This is a vast package, featuring most of the typical analysis you may want to carry out, and plenty of freedom to produce your own.\n",
     "\n",
     "**Next steps**\n",
-    "- For more on how to use MDAnalysis, see the [User Guide](https://userguide.mdanalysis.org/2.0.0-dev0/) and [documentation](https://docs.mdanalysis.org/2.0.0-dev0/)\n",
+    "- Have a look at the [extra material below](#bonds), on how to identify and calculate bonds and dihedrals in your molecule.\n",
     "- More information on how to extract information from trajectory, building upon and extending what we have seen here, is available in the Jupyter notebook [Extra_Trajectories.ipynb](Extra_Trajectories.ipynb)\n",
     "- If you are interested in knowing how the images in the Lecture slides were produced, have a look at the notebook [Extra_p24_analysis.ipynb](Extra_p24_analysis.ipynb)\n",
-    "- [nglview](https://github.com/nglviewer/nglview#usage) has a lot of visualisation options - you can add multiple selections to one view, change their colour and representation style and more. Look through their documentaiton and see what you can create!\n",
+    "- [nglview](https://github.com/nglviewer/nglview#usage) has a lot of visualisation options - you can add multiple selections to one view, change their colour and representation style and more. Look through their documentation and see what you can create!\n",
     "\n",
     "**Additional resources**\n",
+    "- For more on how to use MDAnalysis, see the [User Guide](https://userguide.mdanalysis.org/2.0.0-dev0/) and [documentation](https://docs.mdanalysis.org/2.0.0-dev0/)\n",
     " - Ask questions on the [user mailing list](https://groups.google.com/group/mdnalysis-discussion) or on [Discord](https://discord.gg/fXTSfDJyxE)\n",
     " - Report bugs on [GitHub](https://github.com/MDAnalysis/mdanalysis/issues?)\n"
    ]
@@ -1580,7 +1577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "toc": {
    "base_numbering": 1,
