--- a/5_Analysis_MDAnalysis/Extra_p24_analysis.ipynb
+++ b/5_Analysis_MDAnalysis/Extra_p24_analysis.ipynb
@@ -10,11 +10,97 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a2f55156-1646-4d7d-9b5c-e0b8427bebf6",
+   "metadata": {},
+   "source": [
+    "**Author**: Dr Matteo Degiacomi (matteo.t.degiacomi@durham.ac.uk)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea2fe146-eea8-46f7-8696-ff5fa5cb823d",
+   "metadata": {},
+   "source": [
+    "## Google Colab setup\n",
+    "<div class=\"alert alert-warning\">\n",
+    "<b>Attention:</b> Please only run the following cells if you are using Colab! These cells install necessary packages and download data.</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74ed71bc-78a0-46b5-883c-43c4bdfcfd27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then pip install condacolab; fi\n",
+    "import condacolab\n",
+    "condacolab.install()\n",
+    "\n",
+    "import condacolab\n",
+    "!mamba install -c conda-forge mdanalysis mdanalysistests mdanalysisdata nglview scikit-learn ipywidgets=7.6.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "219f7065-cb11-4ba5-ba4f-49e59b8f6aa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# enable third party jupyter widgets\n",
+    "from google.colab import output\n",
+    "output.enable_custom_widget_manager()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b355b46c-71a4-49d4-bc73-ef743f25a847",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then git clone https://github.com/CCPBioSim/CCP5_Simulation_of_BioMolecules; fi\n",
+    "import os\n",
+    "os.chdir(f\"CCP5_Simulation_of_BioMolecules{os.sep}4_Analysis_MDAnalysis\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d12646a-486f-43b8-aaee-76157acd66cf",
+   "metadata": {},
+   "source": [
+    "## Jupyter cheat sheet\n",
+    "\n",
+    "- to run the currently highlighted cell, hold <kbd>&#x21E7; Shift</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
+    "- to get help for a specific function, place the cursor within the function's brackets, hold <kbd>&#x21E7; Shift</kbd>, and press <kbd>&#x21E5; Tab</kbd>;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d143168-1643-4caa-907e-15c87cdfb52d",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\"><b> REMEMBER: variables persist between cells</b> \n",
+    "    \n",
+    "Be aware that it is the order of execution of cells that is important in a Jupyter notebook, not the <em>order</em> in which they appear. Python will remember <em>all</em> the code that was run previously, including any variables you have defined, irrespective of the order in the notebook. Therefore if you define variables lower down the notebook and then (re)run cells further up, those defined further down will still be present. </div> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe8671d2-93ec-4fb3-b733-a6d47f818a2b",
+   "metadata": {},
+   "source": [
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0e970ea9-499e-463c-8912-d654db8fa4f4",
    "metadata": {},
    "source": [
-    "The simulation we will analyse has been produced in: [M. T. Degiacomi and M. Dal Peraro, \"Macromolecular Symmetric Assembly Prediction Using Swarm Intelligence\n",
-    "Dynamic Modeling\", Structure 21, 1097 (2013)](https://www.cell.com/structure/fulltext/S0969-2126(13)00196-2?_returnURL=https%3A%2F%2Flinkinghub.elsevier.com%2Fretrieve%2Fpii%2FS0969212613001962%3Fshowall%3Dtrue).\n"
+    "This Jupyter notebook produces the plot presented in the Lecture slides. To this end, we will analyse the MD simulation produced in: [M. T. Degiacomi and M. Dal Peraro, \"Macromolecular Symmetric Assembly Prediction Using Swarm Intelligence\n",
+    "Dynamic Modeling\", Structure 21, 1097 (2013)](https://www.cell.com/structure/fulltext/S0969-2126(13)00196-2?_returnURL=https%3A%2F%2Flinkinghub.elsevier.com%2Fretrieve%2Fpii%2FS0969212613001962%3Fshowall%3Dtrue). Let's start by importing the packages we need."
    ]
   },
   {
@@ -34,10 +120,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d36c850-7ace-41e5-821d-9376327231da",
+   "id": "7b36a4d1-1988-4aad-8af7-e25b287e9a7e",
    "metadata": {},
    "source": [
-    "Load the simulation. To keep the data size small, we will loaded a downsampled version of the trajectory (1 frame every 2 ns). In the slides, we had a simulation sampled every 1 ns."
+    "Now, let's create an MDAnalysis <code>Universe</code>. To keep the data size small, we will loaded a downsampled version of the trajectory (1 frame every 2 ns). In the slides, we had a simulation sampled every 1 ns."
    ]
   },
   {
@@ -55,7 +141,15 @@
    "id": "30b29017-8118-4ea9-9476-b0471cfb10c0",
    "metadata": {},
    "source": [
-    "# Root Mean Square Deviations (RMSD)"
+    "## Root Mean Square Deviations (RMSD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47d163d5-4f5c-4397-9610-e26a38e3bae5",
+   "metadata": {},
+   "source": [
+    "Let's demonstrate how the time evolution of RMSD with respect to the first frame changes with different alignments and atoms of interest."
    ]
   },
   {
@@ -163,7 +257,7 @@
    "id": "408d030b-a5c6-446f-9840-bf67820e6443",
    "metadata": {},
    "source": [
-    "# pairwise RMSD"
+    "## pairwise RMSD"
    ]
   },
   {
@@ -198,7 +292,7 @@
    "id": "9d30c163-f7a7-489a-b9fe-06608d9cd245",
    "metadata": {},
    "source": [
-    "# Root Mean Square Fluctuations (RMSF)"
+    "## Root Mean Square Fluctuations (RMSF)"
    ]
   },
   {
@@ -206,7 +300,7 @@
    "id": "e4e4c72a-4255-4fd2-8ecf-502d212c697b",
    "metadata": {},
    "source": [
-    "We start by defining a function that aligns the trajectory and calculates the RMSF of a selection of interest"
+    "We start by defining a function that aligns the trajectory and calculates the RMSF of a selection of interest."
    ]
   },
   {
@@ -244,7 +338,7 @@
    "id": "e1f137da-462b-43e5-9c39-44a0826ce4be",
    "metadata": {},
    "source": [
-    "Now we can call our function using different selections"
+    "Now we can call our function using different selections."
    ]
   },
   {
@@ -301,7 +395,7 @@
    "id": "453510f6-2bd4-4856-a871-3c28bafd4f49",
    "metadata": {},
    "source": [
-    "# Radius of gyration"
+    "## Radius of gyration and end-to-end distance"
    ]
   },
   {
@@ -312,7 +406,6 @@
    "outputs": [],
    "source": [
     "#u = mda.Universe(\"trajectory_formatted.pdb\")\n",
-    "\n",
     "nterm = u.select_atoms('name N')[0]\n",
     "cterm = u.select_atoms('name C')[-1]\n",
     "bb = u.select_atoms('protein')\n",
@@ -356,7 +449,15 @@
    "id": "86865f4e-ea12-4fda-860d-99ba2f250daf",
    "metadata": {},
    "source": [
-    "# Hydrogen bonds"
+    "## Hydrogen bonds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecae01ea-b687-43ac-ae3c-3b86d37a4859",
+   "metadata": {},
+   "source": [
+    "The function below can work the hydrogen bonds in your protein. Can you work out how to use it?"
    ]
   },
   {
@@ -402,6 +503,17 @@
     "    hbond_donors = potential_hbond_donors[angle_idx]\n",
     "    \n",
     "    return hbond_acceptors, hbond_hydrogens, hbond_donors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f7002d1-05a0-473c-93eb-384676f12848",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try using the hbonds function here!\n",
+    "\n"
    ]
   },
   {
